# stellar-did-credit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  SECURITY.md  TODO.md  deployments.testnet.json  lefthook.yml  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pr.md
.github/: PULL_REQUEST_TEMPLATE.md  secret_scanning.yml
.github/ISSUE_TEMPLATE/: issue.md
contracts/credit-oracle/: Cargo.toml
contracts/credit-oracle/src/: lib.rs
contracts/credit-oracle/test_snapshots/tests/: test_admin_transfer_two_step.1.json  test_apply_weights_after_timelock_succeeds.1.json  test_apply_weights_before_timelock_fails.1.json  test_base_score_is_300.1.json  test_compute_cooldown_can_be_disabled_by_admin.1.json  test_compute_score_allows_after_cooldown_expires.1.json  test_compute_score_rejects_within_cooldown.1.json  test_counterparty_bonus_adds_points.1.json  test_deregistered_feeder_cannot_update_tx_stats.1.json  test_deregistered_lender_cannot_record_repayment.1.json  test_exceptional_score_equals_850.1.json  test_non_pending_admin_cannot_accept.1.json  test_only_admin_can_register_feeder.1.json  (+17 more)
contracts/governance/: Cargo.toml
contracts/governance/src/: lib.rs
contracts/identity-oracle/: Cargo.toml
contracts/identity-oracle/src/: lib.rs
contracts/revocation-registry/src/: lib.rs
contracts/tests/src/: integration_test.rs
docs/: architecture.md  did-spec.md  event-indexing.md  issuer-guide.md  lender-guide.md  mainnet-deployment.md  scoring-spec.md  upgrade-guide.md  zk-proof-design.md
scripts/: deploy.sh
(+26 files in other folders)
