[workspace]
members = [
  "contracts/identity-oracle",
  "contracts/credit-oracle",
  "contracts/revocation-registry",
  "contracts/tests",
]
resolver = "2"

[profile.release]
overflow-checks = true
opt-level = "z"
lto = true
codegen-units = 1

[workspace.dependencies]
soroban-sdk = { version = "22.0.0" }
soroban-sdk-testutils = { package = "soroban-sdk", version = "22.0.0", features = ["testutils"] }
